@@ -1,3 +1,8 @@
+12 Aug 2009 (svn.debian.org/tux4kids -revision 1423)
+[Sarah Frisk <ssfrisk@gmail.com> }
+	- Handled some bug issues
+	- EditWordList() now displays wordlist name
+
 11 Aug 2009 (svn.debian.org/tux4kids -revision 1416)
 [Sarah Frisk <ssfrisk@gmail.com> }
 	- Changed arrow location for EditWordList() and ChooseListToEdit()
